# V5-APF-Engine-

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  report.html
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  EPISTEMIC_TAGS.md
docs/figures/: dependency_dag.mermaid
engine/: README.md  admissibility_physics_engine.py  run_engine.py
scripts/: dep_graph.py  run_all.py
src/apf/: __init__.py  _constants.py  _helpers.py  _linalg.py  _result.py  bank.py  core.py  cosmology.py  gauge.py  generations.py  gravity.py  spacetime.py  supplements.py  validation.py
tests/: test_bank.py  test_core.py  test_cosmology.py  test_dependencies.py  test_gauge.py  test_generations.py  test_gravity.py  test_mutations.py  test_spacetime.py  test_supplements.py  test_validation.py
